Sun Sep 21 17:07:45 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP_EC/BasicSP.mpc:
	* examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedED.mpc:
	* examples/handcrafted/BasicSP_EC/BMDevice/BMDevice.mpc:
	* examples/handcrafted/BasicSP_EC/BMDisplay/BMDisplay.mpc:
	* examples/handcrafted/BasicSP_EC/EC/EC.mpc
	* examples/handcrafted/BasicSP_EC2/BasicSP.mpc:
	* examples/handcrafted/BasicSP_EC2/BMClosedED/BMClosedED.mpc:
	* examples/handcrafted/BasicSP_EC2/BMDevice/BMDevice.mpc:
	* examples/handcrafted/BasicSP_EC2/BMDisplay/BMDisplay.mpc:
	  Changed the project file names so that they don't clash with the
	  project names in examples/handcrafted/BasicSP. This shold get
	  rid of warning in VC7 builds hosted by remedy.

Fri Sep 19 14:27:57 2003  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * performance-tests/Benchmark/RoundTripServer/RoundTripServer.mpc:
          Fixed to adhere to latest mpc changes. This also ensured proper
          make files to be generated.

Fri Sep 19 13:31:50 2003  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * performance-tests/Benchmark/descriptors/Test-IOR.cad:
          cad file to test CORBA server with Component client
        * performance-tests/Benchmark/RoundTripClient/run_test_ior.pl:
          Perl script to run the benchmark
        * performance-tests/Benchmark/RounTrip_server:
        * performance-tests/Benchmark/RoundTripServer/LatencyTest.cpp:
        * performance-tests/Benchmark/RoundTripServer/LatencyTest.h:
        * performance-tests/Benchmark/RoundTripServer.mpc:
        * performance-tests/Benchmark/RoundTripServer/server.cpp:
        * performance-tests/Benchmark/RoundTripServer/Test.idl:
          A server to communicate with CIAO client, implementing the same
          interface needed.

Tue Sep 16 14:04:06 2003  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Example/ComponentDeploymentDescriptor: Added small example